--- a/README.Rmd
+++ b/README.Rmd
@@ -23,4 +23,4 @@ CopulaSensitivity includes the R codes for ..... , which is organized as
 
 - `simulation/Sparse_Effects_Setting` includes simulation with sparse effects settings in section 6.2.
 
-- `movie_analysis` includes the reanalysis of the actor case study in section 7
+- `movie_analysis` includes the reanalysis of the actor case study in section 7.
